fix(select) list checkbox on safari for select all. fixes #1246

--- a/src/sass/_selectable_main_table.scss
+++ b/src/sass/_selectable_main_table.scss
@@ -4,6 +4,13 @@
 
   .multiselect-checkbox {
     display: inline-block;
+
+    // fix for alignment of the select all checkbox in safari
+    // @see https://github.com/canonical/lxd-ui/issues/1246
+    // @see https://warthogs.atlassian.net/browse/WD-7486
+    .p-checkbox__label {
+      display: contents;
+    }
   }
 
   &.no-menu {
